<resources>
    <string name="app_name">PictogramApp</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_staging">StagingActivity</string>

    <string name="button_label_stage">Staging</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome to PictogramApp!</string>
    <string name="button_start">Start</string>

    <string name="preference_file_key" translatable="false">com.d24.android.pictogramapp.PREFERENCE_FILE_KEY</string>
    <string name="preference_value_username" translatable="false">Username</string>
    <string name="preference_value_firstrun" translatable="false">First run</string>

    <string name="button_add">Add</string>
    <string name="button_background">Background</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">Redo</string>
    <string name="button_info">Info</string>
    <string name="button_save">Save</string>
    <string name="content_add">Add a figure to the scene</string>
    <string name="content_background">Change the background colors</string>
    <string name="content_undo">Undo the last change</string>
    <string name="content_redo">Redo the previous change</string>
    <string name="content_info">Display information</string>

    <string name="dialog_save_and_exit">Save and exit</string>
    <string name="dialog_exit_info">Save your story and return to the main menu</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save_canceled">Saving cancel</string>

    <string name="error_file_save">Could not save file to storage</string>
    <string name="success_file_save">Story saved successfully</string>
    <string name="button_retry">Try again</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_save">Name your story</string>
    <string name="error_file_load">Could not load file</string>
    <string name="empty">No stories created yet</string>
    <string name="empty_figure">A figure illustrating an invisible person</string>
    <string name="action_add_page">Add new scene</string>
    <string name="action_remove_page">Remove current scene</string>
    <string name="content_edit">Change the name of this story</string>
    <string name="content_delete">Delete this story</string>
    <string name="title_stories">Your stories</string>
    <string name="action_move_forward">Move scene right</string>
    <string name="action_move_back">Move scene left</string>
    <string name="field_name">Name</string>
    <string name="error_file_rename">Could not rename file</string>
    <string name="dialog_delete">Do you want to delete this story?</string>
    <string name="error_file_delete">Could not delete file</string>
    <string name="key_file" translatable="false">filename</string>
    <string name="success_story_delete">Story deleted</string>
    <string name="intro_about">Create your own stories with symbolic figures</string>
    <string name="error_file_restore">Could not restore file</string>
    <string name="intro_adding_description">Add figures and set colors through the top action bar</string>
    <string name="intro_credits">Developed in cooperation with</string>
    <string name="intro_adding_title">Create content</string>
    <string name="intro_editing_title">Edit content</string>
    <string name="intro_editing_description">Adjust position, size and rotation through the rectangular controls</string>
    <string name="intro_credits_and">and</string>
    <string name="logo_uib_description">Logo for the University of Bergen</string>
    <string name="logo_kb_description">Logo for the Church City Mission</string>
    <string name="app_intro_skip_button">Skip</string>
    <string name="app_intro_done_button">Done</string>
    <string name="action_show_intro">Show intro sequence</string>
</resources>
